<resources>
    <string name="app_name" translatable="false">Coxswain</string>
    <string name="action_mock">Mock</string>
    <string name="action_help">Help</string>
    <string name="action_bluetooth">Connect via Bluetooth</string>
    <string name="action_evaluate">Evaluate</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_bind">Bind</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_ascending">ascending</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">Edit</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_select">Select</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_confirm_title">Deletion?</string>
    <string name="action_delete_confirm_message">Deletion can not be reverted!</string>
    <string name="action_delete_confirm">Delete now</string>
    <string name="action_repeat">Repeat</string>
    <string name="action_challenge">Challenge</string>
    <string name="action_new">New</string>
    <string name="action_day">Day</string>
    <string name="action_week">Week</string>
    <string name="action_month">Month</string>
    <string name="gym_notification_connecting">Connecting to %s …</string>
    <string name="gym_notification_connected">Connected to %s</string>
    <string name="gym_notification_disconnect">Cancel</string>
    <string name="gym_ready">ready</string>
    <string name="gym_repository_extern_failed">Cannot load repository from external location
    </string>
    <string name="distance_miles">%,d mi</string>
    <string name="distance_yards">%,d yd</string>
    <string name="distance_feets">%,d ft</string>
    <string name="distance_meters">%,d m</string>
    <string name="distance_label">Distance</string>
    <string name="distance_pattern">00000</string>
    <string name="duration_minutes">%d minutes</string>
    <string name="duration_seconds">%d seconds</string>
    <string name="duration_label">Duration</string>
    <string name="duration_pattern">00:60</string>
    <string name="strokes_count">%,d strokes</string>
    <string name="strokes_label">Strokes</string>
    <string name="strokes_pattern">0000</string>
    <string name="energy_kilocalories">%,d kcal</string>
    <string name="energy_watthours">%,d Wh</string>
    <string name="energy_kilojoules">%,d kJ</string>
    <string name="energy_label">Energy</string>
    <string name="energy_pattern">0000</string>
    <string name="strokeRate_strokesPerMinute_abbr">%d spm</string>
    <string name="strokeRate_strokesPerMinute">%d strokes per minute</string>
    <string name="strokeRate_label">Strokerate</string>
    <string name="strokeRate_pattern">-00</string>
    <string name="average_strokeRate_label">⌀ Strokerate</string>
    <string name="pulse_beatsPerMinute_abbr">%d bpm</string>
    <string name="pulse_beatsPerMinute">%d beats per minute</string>
    <string name="pulse_label">Pulse</string>
    <string name="pulse_pattern">-000</string>
    <string name="speed_metersPerSecond_abbr">%.1f m/s</string>
    <string name="speed_metersPerSecond">%.1f meters per second</string>
    <string name="speed_label">Speed</string>
    <string name="speed_pattern">-0.00</string>
    <string name="average_speed_label">⌀ Speed</string>
    <string name="power_watts_abbr">%d W</string>
    <string name="power_watts">%d watts</string>
    <string name="power_label">Power</string>
    <string name="power_pattern">-000</string>
    <string name="average_power_label">⌀ Power</string>
    <string name="strokeRatio_label">Strokeratio</string>
    <string name="strokeRatio_pattern">1:0.0</string>
    <string name="time_label">Time</string>
    <string name="time_pattern">00:60</string>
    <string name="split_label">Split</string>
    <string name="split_pattern">60:60</string>
    <string name="average_split_label">⌀ Split</string>
    <string name="average_split_pattern">60:60</string>
    <string name="delta_duration_label">Δ Duration</string>
    <string name="delta_duration_pattern">-60:60</string>
    <string name="delta_distance_label">Δ Distance</string>
    <string name="delta_distance_pattern">-0000</string>
    <string name="none_label">None</string>
    <string name="none_pattern"/>
    <string name="sort_start">Sorting by start</string>
    <string name="sort_duration">Sorting by duration</string>
    <string name="sort_distance">Sorting by distance</string>
    <string name="sort_energy">Sorting by energy</string>
    <string name="programs">Program</string>
    <string name="workouts">Workout</string>
    <string name="performance">Performance</string>
    <string name="program_name_new">New program</string>
    <string name="program_name_segments">Segments</string>
    <string name="rowing_measurement_rejected">Rower was reset</string>
    <string name="rowing_program_finished">Program finished</string>
    <string name="workout_binding_decrease">Remove</string>
    <string name="workout_binding_increase">Add</string>
    <string name="snapshots_show_rests">include rest segments</string>
    <string name="import_chooser">Please install a file manager</string>
    <string name="import_unknown">Unknown import format</string>
    <string name="calendar_export">Calendar</string>
    <string name="calendar_export_failed">Exporting workout failed</string>
    <string name="calendar_export_finished">Event inserted into calendar</string>
    <string name="program_export">File</string>
    <string name="program_export_share">Share …</string>
    <string name="program_export_starting">Exporting to file</string>
    <string name="program_export_finished">Program exported to %s</string>
    <string name="program_export_failed">Exporting program failed</string>
    <string name="program_import_starting">Importing program</string>
    <string name="program_import_finished">Program imported</string>
    <string name="program_import_failed">Importing program failed</string>
    <string name="garmin_export">TCX</string>
    <string name="garmin_export_share">Share TCX …</string>
    <string name="garmin_export_starting">Exporting workout</string>
    <string name="garmin_export_finished">Exported to %s</string>
    <string name="garmin_export_track_course_unavailable">Course is erroneous.</string>
    <string name="garmin_export_failed">Exporting workout failed</string>
    <string name="garmin_import_starting">Importing workout</string>
    <string name="garmin_import_finished">Workout imported</string>
    <string name="garmin_import_failed">Import of workout failed</string>
    <string name="googlefit_failed">Google Fit not available</string>
    <string name="googlefit_export">Google Fit</string>
    <string name="googlefit_export_permissions_manual">Permission required, please start export manually</string>
    <string name="googlefit_export_starting">Exporting to Google Fit</string>
    <string name="googlefit_export_finished">Exported to Google Fit</string>
    <string name="googlefit_export_failed">Export to Google Fit failed</string>
    <string name="sensors_heart_rejected">No access to heart rate sensor</string>
    <string name="sensors_heart_not_found">No Heart rate sensor found</string>
    <string name="sensors_heart_reading">Reading heart rate sensor</string>
    <string name="ant_heart_dependency_not_installed">Ant+ is not available</string>
    <string name="ant_heart_searching">Searching for heart rate via Ant+ …</string>
    <string name="ant_heart_not_found">No heart rate found via Ant+</string>
    <string name="ant_heart_reading">Reading heart rate via Ant+</string>
    <string name="bluetooth_heart">Heart rate sensor</string>
    <string name="bluetooth_heart_no_bluetooth">Bluetooth not available</string>
    <string name="bluetooth_heart_no_location">Bluetooth requires enabled location services</string>
    <string name="bluetooth_heart_connecting">Bluetooth connecting to %s</string>
    <string name="bluetooth_heart_failed">Bluetooth connection to %s failed</string>
    <string name="bluetooth_heart_not_found">Bluetooth no heart rate found on %s</string>
    <string name="bluetooth_heart_connected">Bluetooth reading heart rate from %s</string>
    <string name="bluetooth_heart_disconnected">Bluetooth heart connection lost to %s</string>
    <string name="bluetooth_heart_battery_level">Bluetooth heart battery level &lt; %d%%</string>
    <string name="bluetooth_choose">Choose %s</string>
    <string name="bluetooth_choose_filtered">%s only</string>
    <string name="bluetooth_choose_remember">remember selection</string>
    <string name="bluetooth_rower">Rower</string>
    <string name="bluetooth_rower_no_bluetooth">Bluetooth not available</string>
    <string name="bluetooth_rower_no_location">Bluetooth requires enabled location services</string>
    <string name="bluetooth_rower_failed">Bluetooth connection to %s failed</string>
    <string name="bluetooth_rower_not_found">Bluetooth no rower found on %s</string>
    <string name="bluetooth_rower_disconnected">Bluetooth rower connection lost to %s</string>
    <string name="bluetooth_rower_battery_level">Bluetooth rower battery level &lt; %d%%</string>
    <string name="bluetooth_rower_reset_timeout">Please reset your rower</string>
    <string name="preference_training_title">Training</string>
    <string name="preference_adjust_energy" translatable="false">preference_adjust_energy</string>
    <string name="preference_adjust_energy_title">Adjust energy</string>
    <string name="preference_adjust_energy_summary">Adjust energy to body weight</string>
    <string name="preference_weight" translatable="false">preference_weight</string>
    <string name="preference_weight_title">Body weight</string>
    <string name="preference_weight_summary">Adjust for %s kg body weight</string>
    <string name="preference_adjust_speed" translatable="false">preference_adjust_speed</string>
    <string name="preference_adjust_speed_title">Adjust speed</string>
    <string name="preference_adjust_speed_summary">Calculate speed from power</string>
    <string name="preference_energy_unit" translatable="false">preference_energy_unit</string>
    <string name="preference_energy_unit_title">Energy</string>
    <string name="preference_energy_unit_summary">Energy unit %s</string>
    <string name="preference_distance_unit" translatable="false">preference_distance_unit</string>
    <string name="preference_distance_unit_title">Distance</string>
    <string name="preference_distance_unit_summary">Distance unit %s</string>
    <string name="preference_split_distance" translatable="false">preference_split_distance</string>
    <string name="preference_split_distance_title">Split</string>
    <string name="preference_split_distance_summary">Time per %s meters</string>
    <string name="preference_end_workout" translatable="false">preference_end_workout</string>
    <string name="preference_end_workout_title">End workout</string>
    <string name="preference_end_workout_summary">End workout after program complete</string>
    <string name="preference_end_workout_result" translatable="false">preference_end_workout_result</string>
    <string name="preference_end_workout_result_title">Show results</string>
    <string name="preference_end_workout_result_summary">Show results after program complete</string>
    <string name="preference_display_title">Display</string>
    <string name="preference_theme_dark" translatable="false">preference_theme_dark</string>
    <string name="preference_theme_dark_title">Dark theme</string>
    <string name="preference_theme_dark_summary">Use a dark theme</string>
    <string name="preference_picture_in_picture" translatable="false">
        preference_picture_in_picture
    </string>
</resources>