<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_import" android:title="@string/action_import"
          android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_bluetooth" android:title="@string/action_bluetooth"
        android:icon="@drawable/baseline_bluetooth_white_24"
          android:orderInCategory="100" app:showAsAction="always" />

    <item android:id="@+id/action_mock" android:title="@string/action_mock"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
