<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_repeat" android:title="@string/action_repeat"
          android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_challenge" android:title="@string/action_challenge"
          android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_export" android:title="@string/action_export"
          android:orderInCategory="100" android:showAsAction="never"/>
    <item android:id="@+id/action_delete" android:title="@string/action_delete"
          android:orderInCategory="100" android:showAsAction="never" />

</menu>
